feat(app): API endpoints
