# docs/swagger.yaml
@@ -8,6 +8,35 @@ definitions:
       status:
         type: integer
     type: object
+  internal_app.App:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      status:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  internal_app.CreateAppRequest:
+    properties:
+      name:
+        type: string
+      status:
+        type: integer
+    required:
+    - name
+    type: object
+  internal_app.UpdateAppRequest:
+    properties:
+      name:
+        type: string
+      status:
+        type: integer
+    type: object
   internal_user.AuthRequest:
     properties:
       email:
@@ -27,6 +56,8 @@ definitions:
     type: object
   internal_user.CreateUserRequest:
     properties:
+      app_id:
+        type: integer
       email:
         type: string
       firstname:
@@ -37,6 +68,7 @@ definitions:
         minLength: 8
         type: string
     required:
+    - app_id
     - email
     - firstname
     - lastname
@@ -58,6 +90,8 @@ definitions:
     type: object
   internal_user.User:
     properties:
+      app_id:
+        type: integer
       created_at:
         type: string
       email:
@@ -82,6 +116,189 @@ info:
   title: Dvarapala API
   version: "1.0"
 paths:
+  /apps:
+    get:
+      description: Get a list of all registered apps
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dvarapala_pkg_render.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/internal_app.App'
+                  type: array
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+      security:
+      - Bearer: []
+      summary: List all apps
+      tags:
+      - apps
+    post:
+      consumes:
+      - application/json
+      description: Create a new app with the provided details
+      parameters:
+      - description: App details
+        in: body
+        name: app
+        required: true
+        schema:
+          $ref: '#/definitions/internal_app.CreateAppRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/dvarapala_pkg_render.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_app.App'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+      security:
+      - Bearer: []
+      summary: Create a new app
+      tags:
+      - apps
+  /apps/{id}:
+    delete:
+      description: Remove an app from the system by ID
+      parameters:
+      - description: App ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+      security:
+      - Bearer: []
+      summary: Delete app
+      tags:
+      - apps
+    get:
+      description: Get a single app by its unique ID
+      parameters:
+      - description: App ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dvarapala_pkg_render.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_app.App'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+      security:
+      - Bearer: []
+      summary: Get app by ID
+      tags:
+      - apps
+    put:
+      consumes:
+      - application/json
+      description: Update an existing app's details
+      parameters:
+      - description: App ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated app details
+        in: body
+        name: app
+        required: true
+        schema:
+          $ref: '#/definitions/internal_app.UpdateAppRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dvarapala_pkg_render.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_app.App'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dvarapala_pkg_render.Response'
+      security:
+      - Bearer: []
+      summary: Update app
+      tags:
+      - apps
   /health:
     get:
       description: Get the health status of the service
